# csp_ftp

./: meson.build
builddir/meson-info/: meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/cmake_csp/: CMakeCache.txt  CMakeMesonToolchainFile.cmake  Makefile  cmake_install.cmake  cmake_trace.txt
include/csp_ftp/: ftp_client.h  ftp_perf.h  ftp_server.h  ftp_status.h
src/: ftp_client.c  ftp_perf.c  ftp_server.c  ftp_slash.c  ftp_status.c
